--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -6,6 +6,14 @@
             android:icon="@drawable/ic_dollar_black_24dp"
             android:title="@string/exchange_rate_list_label"/>
         <item
+            android:id="@+id/maps_fragment"
+            android:icon="@drawable/ic_location_on_black_24dp"
+            android:title="@string/maps_fragment_label"/>
+        <item
+            android:id="@+id/settings_fragment"
+            android:icon="@drawable/ic_settings_black_24dp"
+            android:title="@string/settings_label"/>
+        <item
             android:id="@+id/about_fragment"
             android:icon="@drawable/ic_info_black_24dp"
             android:title="@string/about"/>
