--- a/app/src/main/res/layout/rate_item.xml
+++ b/app/src/main/res/layout/rate_item.xml
@@ -73,5 +73,20 @@
             app:layout_constraintTop_toTopOf="parent"
             tools:text="UAH" />
 
+        <TextView
+            android:id="@+id/currency_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            tools:text="Euro"
+            android:text="@{rateViewModel.currency.name}"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/exchange_rate"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toEndOf="@+id/base_currency"
+            app:layout_constraintTop_toBottomOf="@+id/base_cur_name" />
+
     </android.support.constraint.ConstraintLayout>
 </layout>
